--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,16 @@
 .main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(20rem, 1fr));
+  grid-gap: 3rem;
+  margin: 0rem 8rem;
+}
+
+.title h1{
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  justify-content: center;
+  padding: 5rem;
+  font-size: 2rem;
 }
 
 .description {
@@ -226,4 +232,21 @@
   to {
     transform: rotate(0deg);
   }
+}
+
+
+.nav{
+  padding: 2rem 0rem;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(223,230,230);
+  background: linear-gradient(0deg, rgba(223,230,230,1) 0%, rgba(207,207,207,1) 100%);
+}
+.logo{
+  text-decoration:none;
+  font-size:1.5rem;
+  font-weight:400;
+  font-family: "Lobster Two", cursive;
+  color: black;
 }
