--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,9 +5,9 @@
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  /* --foreground-rgb: 0, 0, 0; */
+  /* --background-start-rgb: 214, 219, 220; */
+  /* --background-end-rgb: 255, 255, 255; */
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -82,10 +82,12 @@
 html,
 body {
   max-width: 100vw;
+  max-height: 100vh;
   overflow-x: hidden;
 }
 
 body {
+  padding-bottom: 5rem;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -95,9 +97,11 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+
 a {
-  color: inherit;
+  font-size: 1.5rem;
   text-decoration: none;
+  font-weight: bold;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -105,3 +109,12 @@ a {
     color-scheme: dark;
   }
 }
+@media screen and (max-width:768px) {
+  body{
+    margin: 0% 0%;
+  }
+  nav{
+    padding: 3rem 0rem;
+  }
+}
+
