--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,6 +5,23 @@
   margin: 0rem 8rem;
 }
 
+/* Tablet and Smaller Desktop */
+@media (min-width: 701px) and (max-width: 1120px) {
+  .main {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(10rem, 1fr));
+    grid-gap: 3rem;
+    margin: 0rem 8rem;
+  }
+}
+/* Mobile Devices */
+@media (max-width: 700px) {
+  .main {
+  display: block;
+  margin: 0rem 2rem;
+  }
+  }
+
 .title h1{
   display: flex;
   align-items: center;
