--- a/src/styles/Slug.module.css
+++ b/src/styles/Slug.module.css
@@ -1,6 +1,21 @@
 .title{
     padding: 1rem 10rem;
 }
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 701px) and (max-width: 1120px) {
+    .title{
+        padding: 1rem 5rem;
+    }
+}
+
+/* Mobile Devices */
+@media (max-width: 700px) {
+    .title{
+        padding: 1rem 2rem;
+    }
+}
+
 .title h2{
     padding-top: 1rem;
     padding-bottom: 2rem;
